--- a/esp32/netmcu/CMakeLists.txt
+++ b/esp32/netmcu/CMakeLists.txt
@@ -6,6 +6,7 @@ option(BUILD_HOST_TESTS "build host test" OFF)
 
 if (BUILD_HOST_TESTS)
 include(host_tests.cmake)
+
 doxy_create_input()
 else()
 
@@ -22,6 +23,8 @@ set(comp_compile_feats cxx_std_20)
 set(comp_compile_opts "$<$<COMPILE_LANGUAGE:CXX>:-Wno-narrowing>" -Wno-missing-field-initializers)
 #set(comp_compile_opts ${comp_compile_opts} "$<$<COMPILE_LANGUAGE:CXX>:-std=gnu++2a>")
 
+add_link_options(-fsanitize=address)
+add_compile_options(-fsanitize=address)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
