--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "stm32/rv/test/host/unity"]
 	path = stm32/rv/test/host/unity
 	url = https://github.com/ThrowTheSwitch/Unity.git
+[submodule "stm32/rv/external/libopencm3"]
+	path = stm32/rv/external/libopencm3
+	url = https://github.com/libopencm3/libopencm3.git
