--- a/.gitmodules
+++ b/.gitmodules
@@ -5,8 +5,11 @@
 	path = stm32/rv/misc/jsmn
 	url = https://github.com/zserge/jsmn.git
 [submodule "stm32/rv/test/host/unity"]
-	path = stm32/rv/test/host/unity
+	path = stm32/rv/external/unity
 	url = https://github.com/ThrowTheSwitch/Unity.git
 [submodule "stm32/rv/external/libopencm3"]
 	path = stm32/rv/external/libopencm3
 	url = https://github.com/libopencm3/libopencm3.git
+[submodule "stm32/rv/external/catch2"]
+	path = stm32/rv/external/catch2
+	url = https://github.com/catchorg/Catch2.git
