--- a/esp32/netmcu/components/app_main/CMakeLists.txt
+++ b/esp32/netmcu/components/app_main/CMakeLists.txt
@@ -4,7 +4,7 @@ idf_component_register(
     SRCS ${srcs}
     INCLUDE_DIRS "./include"
     REQUIRES app_settings utils_debug utils_misc firmware_update
-    PRIV_REQUIRES app_net app_misc app_settings app_cli app_settings utils_debug key_value_store utils_misc stm32 storage txtio net_mqtt_app stm32_com net_http_server http_server_content
+    PRIV_REQUIRES net app_net app_misc app_settings app_cli app_settings utils_debug key_value_store utils_misc stm32 storage txtio net_mqtt_app stm32_com net_http_server http_server_content
                   nvs_flash
 )
 
