--- a/esp32/netmcu/components/app_uout/CMakeLists.txt
+++ b/esp32/netmcu/components/app_uout/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(srcs status_output_switch.cc so_out.cc so_print.cc so_write_msg.cc so_write_config.cc callbacks.cc) 
+set(srcs so_print.cc so_write_msg.cc so_write_config.cc callbacks.cc) 
 
 idf_component_register(
     SRCS ${srcs} 
