--- a/esp32/netmcu/components/app_cli/CMakeLists.txt
+++ b/esp32/netmcu/components/app_cli/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(srcs cli.cc
     parm_cmd.cc
-    parm_config.cc parm_config_switch.cc
+    parm_config.cc parm_config_comp.cc parm_config_app.cc parm_config_help.cc
     parm_help.cc
     parm_kvs.cc
     parm_mcu.cc
@@ -11,7 +11,7 @@ set(srcs cli.cc
 idf_component_register(
     SRCS ${srcs} 
     INCLUDE_DIRS . "./include" 
-    REQUIRES cli uout_app
+    REQUIRES cli app_uout
     PRIV_REQUIRES app_config stm32 app_misc cli app_settings config_kvs utils_debug utils_misc net net_http_server net_mqtt_app net_mqtt  txtio uout nanopb protobuf
                   mbedtls
 )
