--- a/esp32/netmcu/components/webapp/njs/package.json
+++ b/esp32/netmcu/components/webapp/njs/package.json
@@ -9,27 +9,27 @@
 		"dev": "nollup -c"
 	},
 	"devDependencies": {
-		"@fullhuman/postcss-purgecss": "^2.2.0",
-		"@rollup/plugin-commonjs": "^14.0.0",
+		"@rollup/plugin-alias": "^3.1.1",
+		"@rollup/plugin-commonjs": "^16.0.0",
 		"@rollup/plugin-json": "^4.0.3",
-		"@rollup/plugin-node-resolve": "^8.4.0",
-		"@rollup/plugin-strip": "^1.3.3",
+		"@rollup/plugin-node-resolve": "^10.0.0",
+		"@rollup/plugin-strip": "^2.0.0",
 		"eslint-plugin-svelte3": "^2.7.3",
-		"js-base64": "^3.5.2",
+		"js-base64": "^3.6.0",
 		"jshint": "^2.12.0",
-		"node-sass": "^4.14.1",
-		"nollup": "^0.12.3",
-		"postcss": "^7.0.35",
-		"postcss-load-config": "^2.1.2",
-		"rollup": "^2.28.2",
+		"node-sass": "^5.0.0",
+		"nollup": "^0.13.13",
+		"postcss": "^8.1.7",
+		"postcss-load-config": "^3.0.0",
+		"rollup": "^2.33.2",
 		"rollup-plugin-eslint": "^7.0.0",
-		"rollup-plugin-svelte": "^5.2.2",
-		"rollup-plugin-terser": "^6.1.0",
-		"sirv-cli": "^1.0.5",
-		"svelte": "^3.29.0",
-		"svelte-i18n": "^3.1.0",
-		"svelte-preprocess": "^3.9.12",
-		"tailwindcss": "^1.8.10"
+		"rollup-plugin-svelte": "^6.1.1",
+		"rollup-plugin-terser": "^7.0.2",
+		"sirv-cli": "^1.0.8",
+		"svelte": "^3.29.7",
+		"svelte-i18n": "^3.2.5",
+		"svelte-preprocess": "^4.5.2",
+		"tailwindcss": "^1.9.6"
 	},
 	"jshintConfig": {
 		"esversion": 6,
