--- a/esp32/netmcu/components/webapp/njs/package.json
+++ b/esp32/netmcu/components/webapp/njs/package.json
@@ -9,26 +9,27 @@
 		"dev": "nollup -c"
 	},
 	"devDependencies": {
-		"@rollup/plugin-alias": "^3.1.1",
-		"@rollup/plugin-commonjs": "^16.0.0",
+		"@rollup/plugin-alias": "^3.1.2",
+		"@rollup/plugin-commonjs": "^18.0.0",
 		"@rollup/plugin-json": "^4.0.3",
-		"@rollup/plugin-node-resolve": "^10.0.0",
+		"@rollup/plugin-node-resolve": "^11.2.1",
 		"@rollup/plugin-strip": "^2.0.0",
-		"eslint-plugin-svelte3": "^2.7.3",
+		"eslint-plugin-svelte3": "^3.1.2",
 		"js-base64": "^3.6.0",
 		"node-sass": "^5.0.0",
-		"nollup": "^0.13.13",
-		"postcss": "^8.1.7",
-		"postcss-load-config": "^3.0.0",
-		"rollup": "^2.33.2",
+		"nollup": "^0.16.0",
+		"postcss": "^8.2.9",
+		"postcss-load-config": "^3.0.1",
+		"rollup": "^2.44.0",
+		"rollup-plugin-css-only": "^3.1.0",
 		"rollup-plugin-eslint": "^7.0.0",
-		"rollup-plugin-svelte": "^6.1.1",
+		"rollup-plugin-svelte": "^7.1.0",
 		"rollup-plugin-terser": "^7.0.2",
-		"sirv-cli": "^1.0.8",
-		"svelte": "^3.29.7",
-		"svelte-i18n": "^3.2.5",
-		"svelte-preprocess": "^4.5.2",
-		"tailwindcss": "^1.9.6"
+		"sirv-cli": "^1.0.11",
+		"svelte": "^3.37.0",
+		"svelte-i18n": "^3.3.9",
+		"svelte-preprocess": "^4.7.0",
+		"tailwindcss": "^2.0.4"
 	},
 	"jshintConfig": {
 		"esversion": 6,
@@ -49,6 +50,7 @@
 		}
 	},
 	"dependencies": {
+		"autoprefixer": "^10.2.5",
 		"svelte-icons": "^2.1.0"
 	}
 }
